<resources>
    <string name="app_name">Mono Wallet</string>
    <string name="name_app">Wallet</string>
    <string name="description_splash_screen">A minimal wallet app</string>
    <string name="description_onBoarding">A BETTER and EASIER way to track your income and expenses</string>
    <string name="button_onBoarding">Get Started</string>
    <string name="screen_title_login">Login</string>
    <string name="email">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="confirm">CONFIRM</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login_login_activity">Login</string>
    <string name="don_t_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="register">Register</string>
    <string name="registered_already">Registered already?</string>
    <string name="toast_empty_fields">Error! Fields must not be empty</string>
    <string name="forgot_password_label">Forgot password</string>
    <string name="send_link_button">Send Link</string>
    <string name="check_your_email_label">Check Your Email</string>
    <string name="check_email_description">Check your email! We\'ve sent you a link to reset your password</string>
    <string name="button_open_email_app">Open Email App</string>
    <string name="reset_password">Reset Password</string>
    <string name="cash">Cash</string>
    <string name="error_incorrect_email">Enter a valid email address</string>
    <string name="this_user_was_not_found">This user was not found</string>
    <string name="new_transaction_label">New Transaction</string>
    <string name="add_transaction_button">Add Transaction</string>
    <string name="amount">AMOUNT</string>
    <string name="category">CATEGORY</string>
    <string name="home_bottom_bar">Home</string>
    <string name="profile_bottom_bar">Profile</string>
    <string name="new_transaction_bottom_bar">New Transaction</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="money">MONEY</string>
    <string name="the_field_cannot_be_empty">The field cannot be empty</string>
    <string name="email_is_invalid">Email is invalid</string>
    <string name="password_is_incorrect">Password is incorrect</string>
    <string name="password_less_than_six_characters">Password cannot be less than 6 characters</string>
    <string name="the_passwords_don_t_match">The passwords don\'t match</string>
    <string name="wallets">Wallets</string>
    <string name="debit_card">Debit Card</string>
    <string name="setting">Setting</string>
    <string name="apply">Apply</string>
    <string name="completed">Completed</string>
    <string name="error">Error</string>
    <string name="default_category">Default category</string>

</resources>