<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent_login_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/label_login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:fontFamily="@font/poppins_bold"
        android:letterSpacing="0.17"
        android:text="@string/screen_title_login"
        android:textAllCaps="true"
        android:textColor="@color/gray"
        android:textSize="@dimen/font_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/photo_login_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="94dp"
        android:src="@drawable/undraw_secure_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_text_input_layout_login"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="136dp"
        android:hint="@string/email"
        android:textColorHint="@color/gray"
        app:errorIconDrawable="@android:drawable/ic_dialog_info"
        app:errorTextColor="@android:color/holo_red_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/photo_login_image">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_text_input_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_text_input_layout_login"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="38dp"
        android:hint="@string/password"
        android:textColorHint="@color/gray"
        app:endIconDrawable="@drawable/eye"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_text_input_layout_login">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_text_input_edit_text_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            app:endIconDrawable="@drawable/eye" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forgot_password_text_view_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_regular"
        android:letterSpacing="0.08"
        android:text="@string/forgot_password"
        android:textColor="@color/gray"
        android:textSize="@dimen/font_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_text_input_layout_login" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/black"
        android:fontFamily="@font/poppins_regular"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:letterSpacing="0.15"
        android:text="@string/login_login_activity"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgot_password_text_view_login" />

    <TextView
        android:id="@+id/do_not_account_text_view_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_semi_bold"
        android:letterSpacing="0.08"
        android:text="@string/don_t_have_an_account_yet"
        android:textColor="@color/gray"
        android:textSize="@dimen/font_small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_login_button" />

    <TextView
        android:id="@+id/register_text_view_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_semi_bold"
        android:letterSpacing="0.08"
        android:paddingHorizontal="5dp"
        android:text="@string/register"
        android:textColor="@color/black"
        android:textSize="@dimen/font_small"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/do_not_account_text_view_login"
        app:layout_constraintTop_toBottomOf="@id/login_login_button" />

</androidx.constraintlayout.widget.ConstraintLayout>