<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/parent_register_container"
    android:layout_marginHorizontal="20dp"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/label_text_view_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:letterSpacing="0.17"
        android:text="@string/register"
        android:textAllCaps="true"
        android:textColor="@color/gray"
        android:textSize="@dimen/font_small"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_view_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="94dp"
        android:contentDescription="@null"
        android:src="@drawable/undraw_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_text_input_layout_register"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="136dp"
        android:hint="@string/email"
        android:textColorHint="@color/gray"
        app:layout_constraintTop_toBottomOf="@+id/image_view_register">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_text_input_edit_text_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:letterSpacing="0.17"
            android:textSize="@dimen/font_default" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_text_input_layout_register"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:hint="@string/password"
        android:textColorHint="@color/gray"
        app:endIconCheckable="true"
        app:endIconDrawable="@drawable/eye"
        app:endIconMode="custom"
        app:layout_constraintTop_toBottomOf="@+id/email_text_input_layout_register">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_text_input_edit_text_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:letterSpacing="0.17"
            android:textSize="@dimen/font_default"
            app:endIconDrawable="@drawable/eye" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/enter_button_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/black"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:fontFamily="@font/poppins_regular"
        android:letterSpacing="0.11"
        android:text="@string/register"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/password_text_input_layout_register" />

    <TextView
        android:id="@+id/do_not_account_text_view_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/poppins_semi_bold"
        android:letterSpacing="0.08"
        android:text="@string/registered_already"
        android:textColor="@color/gray"
        android:textSize="@dimen/font_small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enter_button_register" />

    <TextView
        android:id="@+id/login_text_view_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/poppins_bold"
        android:letterSpacing="0.08"
        android:paddingHorizontal="5dp"
        android:text="@string/login_login_activity"
        android:textColor="@color/black"
        android:textSize="@dimen/font_small"
        app:layout_constraintStart_toEndOf="@id/do_not_account_text_view_register"
        app:layout_constraintTop_toBottomOf="@id/enter_button_register" />

</androidx.constraintlayout.widget.ConstraintLayout>