<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent_onBoarding_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="20dp"
    tools:context=".OnBoardingActivity">

    <TextView
        android:id="@+id/label_onBoarding_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:fontFamily="@font/poppins_bold"
        android:letterSpacing="0.17"
        android:text="@string/name_app"
        android:textAllCaps="true"
        android:textSize="@dimen/font_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/description_onBoarding_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:letterSpacing="0.17"
        android:text="@string/description_onBoarding"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/font_large"
        app:layout_constraintBottom_toTopOf="@+id/getStart_onBoarding_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_onBoarding_image"
        app:lineHeight="27sp" />

    <ImageView
        android:id="@+id/image_onBoarding_image"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:src="@drawable/undraw_finance_onboarding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_onBoarding_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/getStart_onBoarding_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:backgroundTint="@color/black"
        android:fontFamily="@font/poppins_regular"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:letterSpacing="0.17"
        android:text="@string/button_onBoarding"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>