<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent_reset_password_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="20dp"
    tools:context=".ResetPasswordActivity">

    <TextView
        android:id="@+id/label_text_view_reset_password"
        android:layout_width="134dp"
        android:layout_height="18dp"
        android:layout_marginTop="46dp"
        android:gravity="top"
        android:text="@string/reset_password"
        android:textAllCaps="true"
        android:textAppearance="@style/login"
        android:textColor="@color/gray"
        android:textSize="@dimen/font_small"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_view_reset_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="94dp"
        android:contentDescription="@null"
        android:src="@drawable/reset_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_text_input_layout_reset_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="456dp"
        android:hint="@string/password"
        android:textColorHint="@color/gray"
        app:endIconCheckable="true"
        app:endIconDrawable="@drawable/eye"
        app:endIconMode="custom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_text_input_edit_text_reset_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:letterSpacing="0.17"
            android:textAllCaps="true"
            android:textSize="@dimen/font_default" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirm_text_input_layout_reset_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="528dp"
        android:hint="@string/confirm"
        android:textColorHint="@color/gray"
        app:endIconCheckable="true"
        app:endIconDrawable="@drawable/eye"
        app:endIconMode="custom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirm_text_input_edit_text_reset_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:letterSpacing="0.17"
            android:textAllCaps="true"
            android:textSize="@dimen/font_default" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_reset_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="624dp"
        android:backgroundTint="@color/black"
        android:fontFamily="@font/poppins_regular"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:letterSpacing="0.14"
        android:text="@string/button_open_email_app"
        android:textAllCaps="false"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>