<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent_check_email_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="20dp"
    tools:context=".CheckEmailActivity">

    <TextView
        android:id="@+id/label_check_email_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:fontFamily="@font/poppins_bold"
        android:letterSpacing="0.17"
        android:text="@string/check_your_email_label"
        android:textAllCaps="true"
        android:textSize="@dimen/font_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_check_email_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:src="@drawable/undraw_opened_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_check_email_text" />

    <TextView
        android:id="@+id/description_check_email_text"
        android:layout_width="335dp"
        android:layout_height="42dp"
        android:layout_marginTop="500dp"
        android:fontFamily="@font/poppins_regular"
        android:gravity="center_horizontal|top"
        android:letterSpacing="0.14"
        android:text="@string/check_email_description"
        android:textSize="@dimen/font_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/open_email_app_check_email_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="600dp"
        android:insetBottom="0dp"
        android:insetTop="0dp"
        android:backgroundTint="@color/black"
        android:fontFamily="@font/poppins_regular"
        android:letterSpacing="0.14"
        android:text="@string/button_open_email_app"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/back_check_email_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:src="@drawable/arrow_left"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/open_email_app_check_email_button" />

</androidx.constraintlayout.widget.ConstraintLayout>