<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent_forgot_password_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="20dp"
    tools:context=".ForgotPasswordActivity">

    <TextView
        android:id="@+id/label_text_view_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:letterSpacing="0.17"
        android:text="@string/forgot_password_label"
        android:textAllCaps="true"
        android:textSize="@dimen/font_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_view_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:contentDescription="@null"
        android:src="@drawable/draw_forgot_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_text_view_forgot_password" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_text_input_layout_forgot_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="292dp"
        android:hint="@string/email"
        app:errorEnabled="true"
        app:errorIconDrawable="@android:drawable/ic_dialog_info"
        app:errorTextColor="@android:color/holo_red_light"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_view_forgot_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_text_input_edit_text_forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:letterSpacing="0.04"
            android:textSize="@dimen/font_default" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/black"
        android:fontFamily="@font/poppins_regular"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:letterSpacing="0.17"
        android:text="@string/send_link_button"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_text_input_layout_forgot_password" />

    <ImageView
        android:id="@+id/arrow_left_image_view_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:contentDescription="@null"
        android:src="@drawable/arrow_left"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_forgot_password" />

</androidx.constraintlayout.widget.ConstraintLayout>